--- a/src/assets/styles/result.scss
+++ b/src/assets/styles/result.scss
@@ -110,7 +110,7 @@
                 margin: 0 2px;
                 width: 30px;
                 height: 44px;
-                display: inline-block;
+                display: block;
                 line-height: 44px;
                 box-shadow: 2px 2px 4px 0 rgba(0, 0, 0, 0.23);
                 border-style: solid;
